--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+v0.98.1u
+--------------
+- RA2: Ignore observers when determining spawn points for match participants.
+- RA2: Enable telefragging during match countdowns.
+- RA2: Properly initialize new bots to the queue of the selected arena.
+
 v0.98u
 --------------
 - RA2: Keep match winners in the arena between matches.
